syntax = "proto3";

package AccountProtocol;

service AccountLogin {
  // Sends a greeting
  rpc Login (Account) returns (AccountResponse);
  rpc CreateNewChar (NewChar) returns (NewCharResponse);
  rpc CharSelection (Id) returns (AccountResponse);
}

message Account
{
	string email = 1;
	string password = 2;
}

message AccountResponse
{
	AccountAck response = 1;
	string hash = 2;
	repeated uint64 charSerial = 3;
}

message Id
{
	uint64 charSerial = 1;
}

enum AccountAck {
	OK = 0;
	WRONG_PASSWORD = 1;
	BAD_CONNECTION = 2;
}

message NewChar
{
	string Name = 1;
}

message NewCharResponse
{
	NewCharResponseT Answer = 1;
}

enum NewCharResponseT
{
	PG_CREATED = 0;
	NO_PG = 1;
	NAME_FORBIDDEN = 2;
}